--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
