--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.0",
     "multer": "^1.4.5-lts.1",
-    "next": "^14.2.5",
+    "next": "^14.2.7",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "xlsx": "^0.18.5"
   }
